# Vitrum

./: .dockerignore  .gitignore  AGENTS.md  Justfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py  routes.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  health.py  vaults.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  note.py  user.py  vault.py
backend/app/schemas/: __init__.py  auth.py  health.py  notes.py  users.py  vaults.py
backend/app/scripts/: __init__.py  reset_db.py
backend/app/services/: __init__.py
backend/app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: init_sqlite.py
backend/tests/: test_placeholder.py
docs/: backend-quality-fixes.md  quality-tools-fixes.md
docs/adr/: 0000-template.md  0001-fullstack-hibrido.md
docs/architecture/: stack-hibrido.md
frontend/: .prettierignore  Dockerfile  astro.config.mjs  eslint.config.mjs  nginx.conf  orval.config.ts  package.json  prettier.config.cjs  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/api/: http-client.ts  queryClient.tsx
frontend/src/components/: NeuralNotesApp.tsx
frontend/src/hooks/: useServerWarmup.ts
frontend/src/layouts/: BaseLayout.astro
(+35 files in other folders)
